# autotweet

./: .gitconfig  .gitignore  Dockerfile  Pipfile  README.md  main.py  pyproject.toml
.github/workflows/: docker-image.yml
src/: model.py
src/autotweet/: app.py  model.py
