[project]
name = "autotweet"
version = "0.1.0"
description = ""
authors = [
    { name = "Muhammad Ahsan", email = "muhammad.ahsan@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.110.3",
    "uvicorn==0.29.0",
    "pydtmc==8.7.0",
    "torch==2.3.0",
    "torchvision==0.18.0",
    "transformers==4.40.1"
]

[tool.poetry]
packages = [
    { include = "autotweet", from = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "black (>=25.11.0,<26.0.0)"
]
