[project]
name = "autotweet"
version = "0.1.0"
description = ""
authors = [
    { name = "Muhammad Ahsan", email = "muhammad.ahsan@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.110.3",
    "uvicorn==0.29.0",
    "pydtmc==8.7.0",
    "transformers==4.40.1",
    # torch and torchvision will be declared via the extra source below
]

[tool.poetry]
packages = [
    { include = "autotweet", from = "src" }
]

# 👇 Add the PyTorch CPU wheel index as an extra source
[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dependencies]
torch = { version = "2.3.0+cpu", source = "pytorch-cpu" }
torchvision = { version = "0.18.0+cpu", source = "pytorch-cpu" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "black (>=25.11.0,<26.0.0)"
]